update page config
