# app/Http/Resources/PageConfigResource.php
@@ -14,6 +14,7 @@ use OpenApi\Annotations as OA;
  *     @OA\Property(property="slogan", type="string", nullable=true),
  *     @OA\Property(property="description", type="string", nullable=true),
  *     @OA\Property(property="addresses", type="array", @OA\Items(type="string")),
+ *     @OA\Property(property="map_url", type="string", format="uri", nullable=true),
  *     @OA\Property(property="hotline", type="string", nullable=true),
  *     @OA\Property(property="email", type="string", format="email", nullable=true),
  *     @OA\Property(property="working_hour", type="string", nullable=true),
@@ -34,6 +35,7 @@ class PageConfigResource extends JsonResource
             'slogan' => $this->slogan,
             'description' => $this->description,
             'addresses' => $this->addresses ?? [],
+            'map_url' => $this->map_url,
             'hotline' => $this->hotline,
             'email' => $this->email,
             'working_hour' => $this->working_hour,
